--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -94,15 +94,14 @@
                 android:layout_marginBottom="@dimen/dimen_40dp"
                 android:onClick="@{() -> viewModel.registerUser(signUpButton)}"
                 app:buttonState="disabled"
-                app:buttonTitleText="Register"
+                app:buttonTitleText="@string/sigup"
                 app:buttonTitleTextColor="@color/white"
                 app:icon="@drawable/ic_user"
                 app:iconVisible="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/passwordTil"
-                app:layout_constraintVertical_bias="0.3" />
+                app:layout_constraintTop_toBottomOf="@+id/passwordTil" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
