--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,11 +33,11 @@
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <com.example.mobile.design.lib.CustomizableGenericButton
-                android:id="@+id/button1"
+                android:id="@+id/buttonOne"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:buttonSubtitleText="ButtonSubtitle"
-                app:buttonTitleText="ButtonTitle"
+                app:buttonSubtitleText="@string/button_subtitle"
+                app:buttonTitleText="@string/button_title"
                 app:icon="@drawable/ic_settings"
                 app:iconVisible="true"
                 android:layout_marginTop="@dimen/dimen_16dp"
@@ -46,25 +46,24 @@
                 app:subtitleVisible="true" />
 
             <com.example.mobile.design.lib.CustomizableGenericButton
-                android:id="@+id/button2"
+                android:id="@+id/buttonTwo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_16dp"
-                app:buttonSubtitleText="ButtonSubtitle"
-                app:buttonTitleText="ButtonTitle"
+                app:buttonSubtitleText="@string/button_subtitle"
+                app:buttonTitleText="@string/button_title"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/button1"
+                app:layout_constraintTop_toBottomOf="@id/buttonOne"
                 app:subtitleVisible="true" />
 
             <com.example.mobile.design.lib.CustomizableGenericButton
-                android:id="@+id/button3"
+                android:id="@+id/buttonThree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_16dp"
-                app:buttonSubtitleText="ButtonSubtitle"
-                app:buttonTitleText="ButtonTitle"
+                app:buttonTitleText="@string/button_title"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/button2" />
+                app:layout_constraintTop_toBottomOf="@id/buttonTwo" />
 
             <com.example.mobile.design.lib.CustomizableGenericButton
                 android:id="@+id/logoutBtn"
@@ -72,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dimen_16dp"
                 app:buttonState="enabled"
-                app:buttonTitleText="Logout"
+                app:buttonTitleText="@string/logout"
                 app:buttonTitleTextColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
