--- a/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
+++ b/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
@@ -5,13 +5,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    app:layout_constraintHeight_min="60dp"
-    app:layout_constraintWidth_min="160dp" >
+    app:layout_constraintHeight_min="@dimen/dimen_60dp"
+    app:layout_constraintWidth_min="@dimen/dimen_160dp"
+    android:descendantFocusability="blocksDescendants" >
 
     <ImageView
         android:id="@+id/customizableButtonIv"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/dimen_48dp"
+        android:layout_height="@dimen/dimen_48dp"
         android:contentDescription="@null"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
@@ -28,6 +29,10 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:importantForAccessibility="no"
+        android:descendantFocusability="blocksDescendants"
         android:layout_margin="@dimen/dimen_8dp">
 
         <TextView
