--- a/mobile-design-library/src/main/res/values/mdl_dimens.xml
+++ b/mobile-design-library/src/main/res/values/mdl_dimens.xml
@@ -14,7 +14,10 @@
     <dimen name="dimen_32dp">32dp</dimen>
     <dimen name="dimen_36dp">36dp</dimen>
     <dimen name="dimen_40dp">40dp</dimen>
+    <dimen name="dimen_48dp">48dp</dimen>
+    <dimen name="dimen_60dp">60dp</dimen>
     <dimen name="dimen_100dp">100dp</dimen>
+    <dimen name="dimen_160dp">160dp</dimen>
 
     <!--    Text size goes here-->
     <dimen name="textSize_10sp">10sp</dimen>
