--- a/mobile-design-library/src/main/res/values/mdl_theme.xml
+++ b/mobile-design-library/src/main/res/values/mdl_theme.xml
@@ -24,7 +24,7 @@
 
     </style>
 
-    <style name="Theme.MDL1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Flavored" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/teal_200</item>
         <item name="colorPrimaryVariant">@color/teal_700</item>
